--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,18 @@
             </plugin>
         </plugins>
     </build>
+  <dependencies>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <version>RELEASE</version>
+    </dependency>
+    <dependency>
+      <groupId>ChessEngine</groupId>
+      <artifactId>Chess</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+  </dependencies>
 
 
 </project>
